changes bindings and exceptions

--- a/3º Trabalho/SD_WCF/Broker/app.config
+++ b/3º Trabalho/SD_WCF/Broker/app.config
@@ -14,7 +14,7 @@
         </behaviors>
         <services>
             <service name="Broker.BrokerService">
-                <endpoint address="" binding="wsDualHttpBinding" bindingConfiguration=""
+                <endpoint address="" binding="basicHttpBinding" bindingConfiguration=""
                     name="service" contract="Broker.IBrokerService">
                     <identity>
                         <dns value="localhost" />
@@ -24,7 +24,7 @@
                     contract="IMetadataExchange" />
                 <host>
                     <baseAddresses>
-                        <add baseAddress="http://localhost:8736/Design_Time_Addresses/Broker/BrokerService/" />
+                        <add baseAddress="http://localhost:8737/Design_Time_Addresses/Broker/BrokerService/" />
                     </baseAddresses>
                 </host>
             </service>
@@ -35,23 +35,23 @@
             </wsDualHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:8733/Design_Time_Addresses/KVStorage/KVService/"
-                binding="wsDualHttpBinding" bindingConfiguration="service"
-                contract="KVService.IKVService" name="storage1">
-                <identity>
-                    <dns value="localhost" />
-                </identity>
-            </endpoint>
-            <endpoint address="http://localhost:8734/Design_Time_Addresses/KVStorage/KVService/"
-                binding="wsDualHttpBinding" bindingConfiguration="" contract="KVService.IKVService"
+            <endpoint address="net.tcp://localhost:8734/Design_Time_Addresses/KVStorage/KVService/"
+                binding="netTcpBinding" bindingConfiguration="" contract="KVService.IKVService"
                 name="storage2">
                 <identity>
                     <dns value="localhost" />
                 </identity>
             </endpoint>
-            <endpoint address="http://localhost:8735/Design_Time_Addresses/KVStorage/KVService/"
-                binding="wsDualHttpBinding" bindingConfiguration="" contract="KVService.IKVService"
+            <endpoint address="net.tcp://localhost:8735/Design_Time_Addresses/KVStorage/KVService/"
+                binding="netTcpBinding" bindingConfiguration="" contract="KVService.IKVService"
                 name="storage3">
+                <identity>
+                    <dns value="localhost" />
+                </identity>
+            </endpoint>
+            <endpoint address="net.tcp://localhost:8733/Design_Time_Addresses/KVStorage/KVService/"
+                binding="netTcpBinding" bindingConfiguration="" contract="KVService.IKVService"
+                name="storage1">
                 <identity>
                     <dns value="localhost" />
                 </identity>
