--- a/3º Trabalho/SD_WCF/UserApp/app.config
+++ b/3º Trabalho/SD_WCF/UserApp/app.config
@@ -5,21 +5,28 @@
     </startup>
     <system.serviceModel>
         <bindings>
+            <basicHttpBinding>
+                <binding name="service1">
+                    <security mode="None">
+                        <message clientCredentialType="UserName" />
+                    </security>
+                </binding>
+            </basicHttpBinding>
             <wsDualHttpBinding>
                 <binding name="service" />
             </wsDualHttpBinding>
         </bindings>
         <client>
             <endpoint address="http://localhost:8736/Design_Time_Addresses/Broker/BrokerService/"
-                binding="wsDualHttpBinding" bindingConfiguration="service"
-                contract="BrokerService.IBrokerService" name="broker1">
+                binding="basicHttpBinding" bindingConfiguration="" contract="BrokerService.IBrokerService"
+                name="broker1">
                 <identity>
                     <dns value="localhost" />
                 </identity>
             </endpoint>
             <endpoint address="http://localhost:8737/Design_Time_Addresses/Broker/BrokerService/"
-                binding="wsDualHttpBinding" bindingConfiguration="service"
-                contract="BrokerService.IBrokerService" name="broker2">
+                binding="basicHttpBinding" bindingConfiguration="" contract="BrokerService.IBrokerService"
+                name="broker2">
                 <identity>
                     <dns value="localhost" />
                 </identity>
