--- a/3º Trabalho/SD_WCF/KVStorage/app.config
+++ b/3º Trabalho/SD_WCF/KVStorage/app.config
@@ -7,24 +7,25 @@
         <behaviors>
             <serviceBehaviors>
                 <behavior name="">
-                    <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-                    <serviceDebug includeExceptionDetailInFaults="false" />
+                    <serviceMetadata httpGetEnabled="false" httpsGetEnabled="false" />
+                    <serviceDebug httpHelpPageEnabled="false" httpsHelpPageEnabled="false"
+                        includeExceptionDetailInFaults="false" />
                 </behavior>
             </serviceBehaviors>
         </behaviors>
         <services>
             <service name="KVStorage.KVService">
-                <endpoint address="" binding="wsDualHttpBinding" bindingConfiguration=""
+                <endpoint address="" binding="netTcpBinding" bindingConfiguration=""
                     name="service" contract="KVStorage.IKVService">
                     <identity>
                         <dns value="localhost" />
                     </identity>
                 </endpoint>
-                <endpoint address="mex" binding="mexHttpBinding" name="metadata"
-                    contract="IMetadataExchange" />
+                <endpoint address="mex" binding="mexTcpBinding" bindingConfiguration=""
+                    name="metadata" contract="IMetadataExchange" />
                 <host>
                     <baseAddresses>
-                        <add baseAddress="http://localhost:8735/Design_Time_Addresses/KVStorage/KVService/" />
+                        <add baseAddress="net.tcp://localhost:8735/Design_Time_Addresses/KVStorage/KVService/" />
                     </baseAddresses>
                 </host>
             </service>
